--- a/Frontline/Frontline.vcxproj
+++ b/Frontline/Frontline.vcxproj
@@ -133,7 +133,7 @@
     <ClCompile Include="EnemyBS.cpp" />
     <ClCompile Include="GraphicsClass.cpp" />
     <ClCompile Include="InstancedTexturedRect.cpp">
-      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">false</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">true</ExcludedFromBuild>
     </ClCompile>
     <ClCompile Include="ITextureShaderClass.cpp" />
     <ClCompile Include="PlayerBS.cpp" />
