--- a/Frontline/Frontline.vcxproj.filters
+++ b/Frontline/Frontline.vcxproj.filters
@@ -228,6 +228,9 @@
     <ClCompile Include="InstanceSystem.cpp">
       <Filter>Header Files\World\Entities\2D</Filter>
     </ClCompile>
+    <ClCompile Include="EntitySystem.cpp">
+      <Filter>Header Files\World\Entities\2D</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="stdafx.h">
@@ -363,6 +366,9 @@
       <Filter>Header Files\World\Graphics\2D\ParticleSystems</Filter>
     </ClInclude>
     <ClInclude Include="InstanceSystem.h">
+      <Filter>Header Files\World\Entities\2D</Filter>
+    </ClInclude>
+    <ClInclude Include="EntitySystem.h">
       <Filter>Header Files\World\Entities\2D</Filter>
     </ClInclude>
   </ItemGroup>
